--- a/tarot-app/src/app/core/components/tarot-one-card/tarot-one-card.component.scss
+++ b/tarot-app/src/app/core/components/tarot-one-card/tarot-one-card.component.scss
@@ -149,10 +149,10 @@
       width: 100%;
     }
 
-    &__result {
+    &.result {
       display: flex;
       gap: 2rem;
-      padding-top: 4.25rem;
+      padding-top: 6.5rem;
     }
 
     /* Card result content */
