--- a/tarot-app/src/app/core/components/tarot-one-card/tarot-one-card.component.scss
+++ b/tarot-app/src/app/core/components/tarot-one-card/tarot-one-card.component.scss
@@ -1,3 +1,5 @@
+@use '../../../styles/breakpoints.scss' as breakpoints;
+@use '../../../styles/grid.scss' as grid;
 /* Container wrap */
 .wrap {
   max-width: 1200px;
@@ -5,14 +7,21 @@
   padding: 1.5rem;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: #333;
+  @include grid.grid();
 }
 
 .card-container {
+  grid-column: 1 / -1;
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 1fr;
+  grid-template-columns: 1fr;
+  grid-template-rows: repeat(2, 1fr);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
+
+  @include breakpoints.lg {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+  }
 
   .deck-of-cards {
     display: flex;
@@ -21,7 +30,10 @@
     margin: 2rem 0;
     position: relative;
     height: 25rem;
-    grid-area: 1 / 1 / 2 / 2;
+
+    @include breakpoints.lg {
+      grid-area: 1 / 1 / 2 / 2;
+    }
 
     .card-back {
       position: absolute;
@@ -124,7 +136,10 @@
     align-content: center;
     transition: transform 0.3s ease;
     background-color: #fff;
-    grid-area: 1 / 2 / 2 / 3;
+    grid-area: 2 / 1 / 3 / 2;
+    @include breakpoints.lg {
+      grid-area: 1 / 2 / 2 / 3;
+    }
 
     .card.result img.reversed {
       transform: rotate(180deg);
@@ -152,7 +167,11 @@
     &.result {
       display: flex;
       gap: 2rem;
-      padding-top: 6.5rem;
+      padding-top: 1.5rem;
+
+      @include breakpoints.lg {
+        padding-top: 6.5rem;
+      }
     }
 
     /* Card result content */
