--- a/tarot-app/src/app/core/components/tarot-one-card/tarot-one-card.component.html
+++ b/tarot-app/src/app/core/components/tarot-one-card/tarot-one-card.component.html
@@ -5,7 +5,7 @@
   <!-- make a mobile app -->
  <!-- describe inner workings of app  -->
   <!-- connect to AI api to show theme of cards drawn? -->
-
+<!-- test -->
   <h2>Select A Card</h2>
 
 <div class="card-container">
